Fixed some alignment issues

--- a/dailycorgi-app/src/App.css
+++ b/dailycorgi-app/src/App.css
@@ -42,20 +42,25 @@
 }
 
 .corgiBtn {
-    margin: 10px;
+    margin: 5% auto;
     background-color: coral;
+    color: white;
 }
 
-.top-center {
-    display: flex;
-    justify-content: center;
+.btn-container {
+    text-align: center;
     margin-top: 20px;
+}
+.top-container {
+    align-content: center;
 }
 
 .corgiImg {
-    margin: 10px;
+    margin: auto;
     padding: 10px;
-    max-width: 750px;
+    width: 75%;
     max-height: 750px;
-    min-width: 500px;
+    max-width: 100%;
+    height: auto;
+    display: block; 
 }
